Fix hero image bug on mobile

--- a/css/grid.css
+++ b/css/grid.css
@@ -29,7 +29,7 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
